blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Referral_Agreement__c/Referral_Agreement__c.object-meta.xml
<CustomObject>
    <description>The working arrangement with one referral partner, such as a broker, insurer panel or another provider. Tracks governance checks and the agreement. Volumes are aggregate counts only. Never record who was referred or why.</description>
    <label>Referral agreement</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>