blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Referral_Agreement__c/fields/Agreement_type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_type__c</fullName>
    <description>Which way work flows and how the partner is listed.</description>
    <label>Agreement type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner refers to us</fullName>
            </value>
            <value>
                <fullName>We refer to partner</fullName>
            </value>
            <value>
                <fullName>Preferred provider listing</fullName>
            </value>
            <value>
                <fullName>Broker introduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>