blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Referral_Agreement__c/fields/Decline_reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_reason__c</fullName>
    <description>Why the partnership did not go ahead. Required on the declined stage.</description>
    <label>Decline reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Governance check failed</fullName>
            </value>
            <value>
                <fullName>Not a fit</fullName>
            </value>
            <value>
                <fullName>Conflict of interest</fullName>
            </value>
            <value>
                <fullName>Partner declined</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>