blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Referral_Agreement__c/fields/Fee_basis__c.field-meta.xml
<CustomField>
    <fullName>Fee_basis__c</fullName>
    <description>Whether any money passes. Fees between healthcare providers can be restricted, so legal checks any value other than none.</description>
    <label>Fee basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Fixed fee</fullName>
            </value>
            <value>
                <fullName>Revenue share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>