blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Referral_Agreement__c/fields/Governance_checked__c.field-meta.xml
<CustomField>
    <fullName>Governance_checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Information governance and clinical governance checks on the partner are complete.</description>
    <label>Governance checked</label>
    <type>Checkbox</type>
</CustomField>