blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Referral_Agreement__c/fields/Partner_contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Names the business contact who manages the partnership. Never a patient.</description>
    <label>Partner contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referral agreements</relationshipLabel>
    <relationshipName>Referral_agreements</relationshipName>
    <type>Lookup</type>
</CustomField>