blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Referral_Agreement__c/fields/Partner_organisation__c.field-meta.xml
<CustomField>
    <fullName>Partner_organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links each agreement to the organisation that is the partner.</description>
    <label>Partner organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral agreements</relationshipLabel>
    <relationshipName>Referral_agreements</relationshipName>
    <type>Lookup</type>
</CustomField>