blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Referral_Agreement__c/fields/Referrals_last_quarter__c.field-meta.xml
<CustomField>
    <fullName>Referrals_last_quarter__c</fullName>
    <description>Aggregate number of referrals in the last quarter. A count only. Never record who was referred.</description>
    <label>Referrals last quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>