blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Referral_Agreement__c/fields/Review_date__c.field-meta.xml
<CustomField>
    <fullName>Review_date__c</fullName>
    <description>When the arrangement is next reviewed.</description>
    <label>Review date</label>
    <type>Date</type>
</CustomField>