blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Referral_Agreement__c/fields/Signed_date__c.field-meta.xml
<CustomField>
    <fullName>Signed_date__c</fullName>
    <description>The day the agreement was signed by both sides.</description>
    <label>Signed date</label>
    <type>Date</type>
</CustomField>