blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Referral_Agreement__c/validationRules/Gate_referral_partners_active.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_referral_partners_active</fullName>
    <active>true</active>
    <description>Stage gate: Referral partners, Active and later stages need Signed date, Review date and Governance checked.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Identified", 1, "Intro meeting", 2, "Governance check", 3, "Agreement sent", 4, "Active", 5, 0) &gt;= 5, OR(ISBLANK(Signed_date__c), ISBLANK(Review_date__c), NOT(Governance_checked__c)))</errorConditionFormula>
    <errorMessage>Fill in Signed date, Review date and Governance checked before moving to Active.</errorMessage>
</ValidationRule>