blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Referral_Agreement__c/validationRules/Lost_referral_partners_declined.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_referral_partners_declined</fullName>
    <active>true</active>
    <description>Lost reason: Referral partners, Declined needs Decline reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, "Declined"), ISBLANK(TEXT(Decline_reason__c)))</errorConditionFormula>
    <errorDisplayField>Decline_reason__c</errorDisplayField>
    <errorMessage>Fill in Decline reason before closing this as Declined.</errorMessage>
</ValidationRule>