blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Referral_Agreement__c/listViews/Partners_due_review.listView-meta.xml
<ListView>
    <fullName>Partners_due_review</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Review_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Review_date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Review_date__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:60</value>
    </filters>
    <label>Partners due review</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>